# rz-retdec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.reuse/: dep5
cmake/: FindRizin.cmake
include/cutter-plugin/: core_plugin.h
include/r2plugin/: filesystem_wrapper.h  r2cgen.h  r2data.h  r2retdec.h  r2utils.h
include/r2plugin/console/: console.h  data_analysis.h  decompiler.h
include/rz-plugin/: cgen.h  data.h  filesystem_wrapper.h  rzretdec.h  utils.h
include/rz-plugin/console/: console.h  data_analysis.h  decompiler.h
scripts/: run-r2-decompilation.py
src/: CMakeLists.txt
src/cutter-plugin/: CMakeLists.txt  core_plugin.cpp
src/r2plugin/: CMakeLists.txt  decompiler-config.h  r2cgen.cpp  r2data.cpp  r2retdec.cpp  r2utils.cpp  registration.cpp
src/r2plugin/console/: console.cpp  data_analysis.cpp  decompiler.cpp
src/rz-plugin/: CMakeLists.txt  cgen.cpp  data.cpp  decompiler-config.h  registration.cpp  rzretdec.cpp  utils.cpp
src/rz-plugin/console/: console.cpp  data_analysis.cpp  decompiler.cpp
test/db/extras/: retdec
